Flow: Added multiple unit sets for flux meter
Flow: Prevent the user from dragging the flux meter out of bounds
Flow: Added readouts for flux meter
Flow: Only show the flux meter if the user has selected it in the control panel
Flow: Split flux meter into front and back layers so the particle go through it
Flow: Added interaction to the flux meter
Flow: Started flux meter
Flow: Added friction and parabolic flow
Fixed units for flow control
Add the draggable sensors in front of the control panels so they can't get lost behind the control panel
Flow: Added t-shaped drag handles to the pipe
Used ResourceGenerator to generate string and image declarations
Changed to use the new common ground/sky background.
# 0.00.14 (51290) Apr 28, 2011
# 0.00.13 (51288) Apr 28, 2011
Converted from swing to piccolo for slider control components, see #2447
Added fluid flow rate control
Fixed: velocity sensor overlap
Improved default starting locations for sensors
Reduced font and made fonts more uniform throughout the sim
Added a border around the fluid density control so it will work with the green button color
Fixed: Fluid Density is expressed in metric (kg/m3) even when units are set to feet
Removed balloon model and view
Fixed: Fluid Density metric units should be HTML to show superscript
Made it possible to select groups of units as "metric" or "english", but left "atmospheres" pressure unit in 1st tab
Added time speed slider
Changed the maximize button from green to blue to make it more visible, see #2824
# 0.00.12 (51100) Apr 23, 2011
Added handle images onto the side of the pipe
Added a checkbox to enable/disable dots
Fix red dot density to be 1/3
Removed slider for dot density
Pulled back the red dye by 10 percent since fluid shouldn't flow next to the barrier edge
Randomly spread out the water in x and y so it doesn't look so discrete when it falls a long way and drops separate
Fixed: measuring tape doesn't reset
Removed unused code