@@ -1,3 +1,4 @@
+Flow: Improved English units for flux meter
 Flow: Added multiple unit sets for flux meter
 Flow: Prevent the user from dragging the flux meter out of bounds
 Flow: Added readouts for flux meter
